--- a/src/eugenics-evils/1-1.md
+++ b/src/eugenics-evils/1-1.md
@@ -1,6 +1,6 @@
 # What is Eugenics?
 
-The wisest thing in the world is to cry out before you are hurt. It is no good to cry out after you are hurt; especially after you are mortally hurt. People talk about the impatience of the populace; but sound historians know that n10st tyrannies have been possible because men moved too late. It is often essential to resist a tyranny before it exists. It is no answer to say, with a distant optimism, that the scheme is only in the air. A blow from a hatchet can only be parried while it is in the air.
+The wisest thing in the world is to cry out before you are hurt. It is no good to cry out after you are hurt; especially after you are mortally hurt. People talk about the impatience of the populace; but sound historians know that most tyrannies have been possible because men moved too late. It is often essential to resist a tyranny before it exists. It is no answer to say, with a distant optimism, that the scheme is only in the air. A blow from a hatchet can only be parried while it is in the air.
 
 There exists to-day a scheme of action, a school of thought, as collective and unmistakable as any of those by whose grouping alone we can make any outline of history. It is as firm a fact as the Oxford Movement, or the Puritans of the Long Parliament; or the Jansenists; or the Jesuits. It is a thing that can be pointed out; it is a thing that can be discussed; and it is a thing that can still be destroyed. It is called for convenience "Eugenics"; and that it ought to be destroyed I propose to prove in the pages that follow. I know that it means very different things to different people; but that is only because evil always takes advantage of ambiguity. I know it is praised with high professions of idealism and benevolence; with silver-tongued rhetoric about purer motherhood and a happier posterity. But that is only because evil is always flattered, as the Furies were called "The Gracious Ones." I know that it numbers many disciples whose intentions are entirely innocent and humane; and who would be sincerely astonished at my describing it as I do. But that is only because evil always wins through the strength of its splendid dupes; and there has in an ages been a disastrous alliance between abnormal innocence and abnormal sin. Of these who are deceived I shall speak of course as we all do of such instruments; judging them by the good they think they are doing, and not by the evil which they really do. But Eugenics itself does exist for those who have sense enough to see that ideas exist; and Eugenics itself, in large quantities or small, coming quickly or coming slowly, urged from good motives or bad, applied to a thousand people or applied to three, Eugenics itself is a thing no more to be bargained about than poisoning.
 
