--- a/src/eugenics-evils/2-4.md
+++ b/src/eugenics-evils/2-4.md
@@ -6,7 +6,7 @@ The truth is that everything that ever came out of a human mouth had a human mea
 
 Now the trouble of the nineteenth century very largely came from the loss of this; the loss of what we may call the natural and heathen mysticism. When modem critics say that Julius Caesar did not believe in Jupiter, or that Pope Leo did not believe in Catholicism, they overlook an essential difference between those ages and ours. Perhaps Julius did not believe in Jupiter; but he did not disbelieve in Jupiter. There was nothing in his philosophy, or the philosophy of that age, that could forbid him to think that there was a spirit personal and predominant in the world. But the modem materialists are not permitted to doubt; they are forbidden to believe. Hence, while the heathen might avail himself of accidental omens, queer coincidences or casual dreams, without knowing for certain whether they were really hints from heaven or premonitory movements in his own brain, the modern Christian turned heathen must not entertain such notions at all, but must reject the oracle as the altar. The modem sceptic was drugged against all that was natural in the supernatural. And this was why the modern tyrant marched upon his doom, as a tyrant literally pagan might possibly not have done.
 
-There is one idea of this kind that runs through most popular tales (those, for instance, on which Shakespeare is so often based)-an idea that is profoundly moral even if the tales are immoral. It is what may be called the flaw in the deed: the idea that, if I take my advantage to the full, I shall hear of something to my disadvantage. Thus Midas fell into a fallacy about the currency; and soon had reason to become something more than a Bimetallist. Thus Macbeth had a fallacy about forestry; he could not see the trees for the wood. He forgot that, though a place cannot be moved, the trees that grow on it can. Thus Shylock had a fallacy of physiology; he forgot that, if you break into the house of life, you find it a bloody house in the most emphatic sense. But the modern capitalist did not read fairytales, and never looked for the little omens at the turnings of the road. He (or the most intelligent section of him) had by now realised his position, and knew in his heart it was a false position. He thought a margin of men out of work was good for his business; he could no longer really think it was good for his country. He could no longer be the old "hardheaded" man who simply did not understand things; he could only be the hard-hearted man who faced them. But he still marched on; he was sure he had made no mistake.
+There is one idea of this kind that runs through most popular tales (those, for instance, on which Shakespeare is so often based)---an idea that is profoundly moral even if the tales are immoral. It is what may be called the flaw in the deed: the idea that, if I take my advantage to the full, I shall hear of something to my disadvantage. Thus Midas fell into a fallacy about the currency; and soon had reason to become something more than a Bimetallist. Thus Macbeth had a fallacy about forestry; he could not see the trees for the wood. He forgot that, though a place cannot be moved, the trees that grow on it can. Thus Shylock had a fallacy of physiology; he forgot that, if you break into the house of life, you find it a bloody house in the most emphatic sense. But the modern capitalist did not read fairytales, and never looked for the little omens at the turnings of the road. He (or the most intelligent section of him) had by now realised his position, and knew in his heart it was a false position. He thought a margin of men out of work was good for his business; he could no longer really think it was good for his country. He could no longer be the old "hardheaded" man who simply did not understand things; he could only be the hard-hearted man who faced them. But he still marched on; he was sure he had made no mistake.
 
 However, he had made a mistake---as definite as a mistake in multiplication. It may be summarised thus: that the same Inequality and insecurity that makes cheap labour may make bad labour, and at last no labour at all. It was as if a man who wanted something from an enemy, should at last reduce the enemy to come knocking at his door in the despair of winter, should keep him waiting in the snow to sharpen the bargain; and then con1e out to find the man dead upon the doorstep.
 
