--- a/src/eugenics-evils/2-7.md
+++ b/src/eugenics-evils/2-7.md
@@ -1,47 +1,23 @@
 # The Transformation of Socialism
 
+Socialism is one of the simplest ideas in the world. It has always puzzled me how there came to be so much bewilderment and misunderstanding and miserable mutual slander about it. At one time I agreed with Socialism, because it was simple. Now I disagree with Socialism, because it is too simple. Yet most of its opponents still seem to treat it, not merely as an iniquity but as a mystery of iniquity, which seems to mystify them even more than it maddens them. It may not seem strange that its antagonists should be puzzled about what it is. It may appear more curious and interesting that its admirers are equally puzzled. Its foes used to denounce Socialism as Anarchy, which is its opposite. Its friends seemed to suppose that it is a sort of optimism, which is almost as much of an opposite. Friends and foes alike talked as if it involved a sort of faith in ideal human nature; why I could never imagine. The Socialist system, in a more special sense than any other, is founded not on optimism but on original sin. It proposes that the State, as the conscience of the community, should possess all primary forms of property; and that obviously on the ground that men cannot be trusted to own or barter or combine or compete without injury to themselves. Just as a State might own all the guns lest people should shoot each other, so this State would own all the p"old and land lest they should cheat or rackrent or exploit each other. It seems extraordinarily simple and even obvious; and so it is. It is too obvious to be true. But while it is obvious, it seems almost incredible that anybody ever thought it optimistic.
 
-CHAPTER V" 
+I am myself primarily opposed to Socialism. or Collectivism or Bolshevism or whatever we call it, for a primary reason not immediately involved here: the ideal of property. I say the ideal and not merely the idea; and this alone disposes of the moral mistake in the matter. It disposes of all the dreary doubts of the Anti-Socialists about men not yet being angels, and all the yet drearier hopes of the Socialists about men soon being supermen. I do not admit that private property is a concession to baseness and selfishness; I think it is a point of honour. I think it is the most truly popular of all points of honour. But this, though it has everything to do with my plea for a domestic dignity, has nothing to do with this passing summary of the situation of Socialism. I only remark in passing that it is vain for the more vulgar sort of Capitalist, sneering at ideals, to say to me that in order to have Socialism "You must alter human nature." I answer "Yes. You must alter it for the worse."
 
-THE TRANSFORMATION OF SOCIALISM 
+The clouds were considerably cleared away from the meaning of Socialism by the Fabians of the 'nineties; by Mr. Bernard Shaw, a sort of anti-romantic Quixote, who charged chivalry as chivalry charged windmills, with Sidney Webb for his Sancho Panza. In so far as these paladins had a castle to defend, we may say that their castle was the Post Office. The red pillar-box was the immovable post against which the irresistible force of Capitalist individualism was arrested. Business men who said that nothing could be managed by the State were forced to admit that they trusted all their business letters and business telegrams to the State.
 
-SOCIALISM is one of the simplest ideas in the world. It has always puzzled me how there came to be so much bewilderment and misunderstanding and miserable mutual slander about it. At one time I agreed with Socialism, because it was simple. Now I disagree with Socialism, because it is too simple. Yet most of its opponents still seem to treat it, not merely as an iniquity but as a mystery of iniquity, which seems to mystify them even more than it maddens them. It may not seem strange that its antagonists should be puzzled about what it is. It may appear more curious and interesting that its admirers are equally puzzled. Its foes used to denounce Socialism as Anarchy, which is its opposite. Its friends seemed to suppose that it is a sort of optimism, which is almost as much of an opposite. Friends and foes alike talked as if it involved a sort of faith in ideal human nature; why I could never imagine. The Socialist system, in a more special sense than any other, is founded not on optimism but on original sin. It proposes that the State, as the conscience of the community, should possess all primary forms of property; and that obviously on the ground that men cannot be trusted to 159 
+After all, it was not found necessary to have an office competing with another office, trYing to send out pinker postage-stamps or more picturesque postmen. It was not necessary to efficiency that the postmistress should buy a penny stamp for a halfpenny and sell it for twopence; or that she should haggle and beat customers down about the price of a postal order; or that she should always take tenders for telegrams. There was obviously nothing actually impossible about the State management of national needs; and the Post Office was at least tolerably managed. Though it was not always a model employer, by any means, it might be made so by similar methods. It was not impossible that equitable pay, and even equal pay, could be given to the Postmaster-General and the postman. We had only to extend this rule of public responsibility, and we should escape from all the terror of insecurity and torture of compassion, which hagrides humanity in the insane extremes of economic inequality and injustice. As Mr. Shaw put it, "A man must save Society's honour before he can save his own."
 
-160 Eugenics and Other Evils 
+That was one side of the argument: that the change would remove inequality; and there was an answer on the other side. It can be stated most truly by putting another model institution and edifice side by side with the Post Office. It is even n10re of an ideal republic, or commonwealth without competition or private profit. It supplies its citizens not only with the stamps but with clothes and food and lodging, and all they require. It observes considerable level of equality in these things; notably in the clothes. It not only supervises the letters but all the other human communications; notably the sort of evil communications that corrupt good manners. This twin model to the Post Office is called the Prison. And much of the scheme for a model State was regarded by its opponents as a scheme for a model prison; good because it fed men equally, but less acceptable since it imprisoned them equally.
 
-own or barter or combine or compete without injury to themselves. Just as a State might own all the guns lest people should shoot each other, so this State would own all the p"old and land lest they should cheat or rackrent or exploit each other. It seems extraordinarily simple and even obvious; and so it is. It is too obvious to be true. But while it is obvious, it seems ahnost incredible that anybody ever thought it optimistic. I am myself primarily opposed to Socialism. or Collectivism or Bolshevism or whatever we call it, for a primary reason not immediately involved here: the ideal of property. I say the ideal and not merely the idea; and this alone disposes of the moral mistake in the matter. It disposes of all the dreary doubts of the Anti-Socialists about men not yet being angels, and all the yet drearier hopes of the Socialists about n1en soon being supermen. I do not admit that private property is a concession to baseness and selfishness; I think it is a point of honour. I think it is the most truly popular of all points of honour. But this, though it has everything to do with my plea for a domestic dignity, has nothing to do with this passing sUlnmary of the situation of Socialism. I only remark in passing that it is vain for the more vulgar sort of Capitalist, sneering at ideals, to say to me that in order to have Socialism " You must alter human nature." I answer" Yes. You must alter it for the worse." The clouds were considerably cleared away from the meaning of Socialism by the Fabians of the 'nine
+It is better to be in a bad prison than in a good one. From the standpoint of the prisoner this is not at all a paradox; if only because in a bad prison he is more likely to escape. But apart from that, a man was in many ways better off in the old dirty and corrupt prison, where he could bribe turnkeys to bring him drink and meet fellow-prisoners to drink with. Now that is exactly the difference between the present system and the proposed system. Nobody worth talking about respects the present system. Capitalism is a corrupt prison. That is the best that can be said for Capitalism. But it is something to be said for it; for a man is a little freer in that corrupt prison than he would be in a complete prison. As a man can find one jailer more lax than another, so he could find one employer more kind than another; he has at least a choice of tyrants. In the other case he finds the same tyrant at every turn. Mr. Shaw and other rational Socialists have agreed that the State would be in practice government by a small group. Any independent man who disliked that group would find his foe waiting for him at the end of every road.
 
-The Transformation of Socialism 161 
+It may be said of Socialism, therefore, very briefly, that its friends recommended it as increasing equality, while its foes resisted it as decreasing liberty. On the one hand it was said that the State could provide homes and meals for all; on the other it was answered that this could only be done by State officials who would inspect houses and regulate meals. The compromise eventually made was one of the most interesting and even curious cases in history. It was decided to do everything that had ever been denounced in Socialism, and nothing that had ever been desired in it. Since it was supposed to gain equality at the sacrifice of liberty, we proceeded to prove that it was possible to sacrifice liberty without gaining equality. Indeed, there was not the faintest attempt to gain equality, least of all economic equality. But there was a very spirited and vigorous effort to eliminate liberty, by means of an entirely new crop of crude regulations and interferences. But it was not the Socialist State regulating those whom it fed, like children or even like convicts. It was the Capitalist State raiding those whom it had trampled and deserted in every sort of den, like outlaws or broken men. It occurred to the wiser sociologists that, after all, it would be easy to proceed more promptly to the main business of bullying men, without having gone through the laborious preliminary business of supporting them. After all, it was easy to inspect the house without having helped to build it; it was even possible, with luck, to inspect the house in time to prevent it being built. All that is described in the documents of the Housing Problem; for the people of this age loved problems and hated solutions. It was easy to restrict the diet without providing the dinner. All that can bê found in the documents of what is called Temperance Reform.
 
-ties; by Mr. Bernard Shaw, a sort of anti-romantic Quixote, who charged chivalry as chivalry charged windmills, with Sidney Webb for his Sancho Panza. In so far as these paladins had a castle to defend, we may say that their castle was the Post Office. The red pillar-box was the immovable post against which the irresistible force of Capitalist individualism was arrested. Business men who said that nothing could be managed by the State were forced to admit that they trusted all their business letters and business telegrams to the State. After all, it was not found necessary to have an office competing with another office, trYing to send out pinker postage-stamps or more picturesque postmen. It was not necessary to efficiency that the postmistress should buy a penny stamp for a halfpenny and sell it for twopence; or that she should haggle and beat customers down about the price of a postal order; or that she should always take tenders for telegrams. There was obviously nothing actually impossible about the State management of national needs; and the Post Office was at least tolerably managed. Though it was not always a model employer, by any means, it might be made so by similar methods. It was not impossible that equit
-ble pay, and even equal pay, could be given to the Postmaster-General and the postman. We had only to extend this rule of public responsibility, and we should escape from all the terror of insecurity and torture of compassion, which hagrides humanity in the insane extremes of economic 
+In short, people decided that it was impossible to achieve any of the good of Socialism, but they comforted themselves by achieving all the bad. All that official discipline, about which the Socialists themselves were in doubt or at least on the defensive, was taken over bodily by the Capitalists. They have now added all the bureaucratic tyrannies of a Socialist state to the old plutocratic tyrannies of a Capitalist State. For the vital point is that it did not in the smallest degree diminish the inequalities of a Capitalist State. It simply destroyed such individual liberties as remained among its victims. It did not enable any man to build a better house; it only limited the houses he might live in---or how he might manage to live there; forbidding him to keep pigs or poultry or to sell beer or cider. It did not even add anything to a man's wages; it only took away something from a man's wages and locked it up, whether he liked it or not, in a sort of money-box which was regarded as a medicine-chest. It does not send food into the house to feed the children; it only sends an inspector into the house to punish the parents for having no food to feed them. It does not see that they have got a fire; it only punishes them for not having a fireguard. It does not even occur to it to provide the fireguard.
 
-162 Eugenics and Other Evils 
+Now this anomalous situation will probably ultimately evolve into the Servile State of Mr. Belloc's thesis. The poor will sink into slavery; it might as correctly be said that the poor will rise into slavery. That is to say, sooner or later, it is very probable that the rich win take over the philanthropic as well as the tyrannic side of the bargain; and will feed men like slaves as well as hunting them like outlaws. But fOr the purpose of my own argument it is not necessary to carry the process so far as this, or indeed any farther than it has already gone. The purely negative stage of interference, at which we have stuck for the present, is in itself quite favourable to all these eugenical experiments. The capitalist whose half-conscious thought and course of action I have simplified into a story in the preceding chapters, finds this insufficient solution quite sufficient for his purposes. What he has felt for a long time is that he must check or improve the reckless and random breeding of the submerged race, which is at once outstripping his requirements and failing to fulfil his needs. Now the anomalous situation has already accustomed him to stopping things. The first interferences with sex need only be negative; and there are already negative interferences without number. So that the study of this stage of Socialism brings us to the same conclusion as that of the ideal of liberty as formally professed by Liberalism. The ideal of liberty is lost, and the ideal of Socialism is changed, till it is a mere excuse for the oppression of the poor.
 
-inequality and injustice. As Mr. Shaw put it, " A man must save Society's honour before he can save his own." That was one side of the argument: that the change would remove inequality; and there was an answer on the other side. It can be stated most truly by putting another model institution and edifice side by side with the Post Office. It is even n10re of an ideal republic, or commonwealth without competition or private profit. It supplies its citizens not only with the stamps but with clothes and food and lodging, and all they require. It observes considerable level of equality in these things; notably in the clothes. It not only supervises the letters but all the other human communications; notably the sort of evil communications that corrupt good manners. This twin model to the Post Office is called the Prison. And much of the scheme for a model State was regarded by its opponents as a scheme for a model prison; good because it fed men equally, but less acceptable since it imprisoned them equally. It is better to be in a bad prison than in a good one. From the standpoint of the prisoner this is not at all a paradox; if only because in a bad prison he is more likely to escape. But apart from that, a man was in many ways better off in the old dirty and corrupt prison, where he could bribe turnkeys to bring. him dIink and meet fellow-prisoners to drink with. Now that is exactly the difference between the present system and the proposed system. Nobody worth talk
+The first movements for intervention in the deepest domestic concerns of the poor all had this note of negative interference. Official papers were sent round to the mothers in poor streets; papers in which a total stranger asked these respectable women questions which a man would be killed for asking, in the class of what were called gentlemen or in the countries of what were called free men. They were questions supposed to refer to the conditions of maternity; but the point is here that the reformers did not begin by building up those economic or material conditions. They did not attempt to pay money or establish property to create those conditions. They never give anything---except orders. Another form of the intervention, and one already mentioned, is the kidnapping of children upon the most fantastic excuses of sham psychology. Some people established an apparatus of tests and trick questions; which might make an amusing game of riddles for the family fireside, but seems an insufficient reason for mutilating and dismembering the family. Others became interested in the hopeless moral condition of children born in the economic condition which they did not attempt to improve. They were great on the fact that crime was a disease; and carried on their criminological studies so successfully as to open the reformatory for little boys who played truant; there was no reformatory for reformers. I need not pause to explain that crime is not a disease. It is criminology that is a disease.
 
-The Transformation of Socialism 163 
-
-ing about respects the present system. Capitalism is a corrupt prison. That is the best that can be said for Capitalism. But it is something to be said for it ; for a man is a little freer in that corrupt prison than he would be in a complete prison. As a man can find one jailer more lax than another, so he could find one employer more kind than another; he has at least a choice of tyrants. In the other case he finds the same tyrant at every turn. Mr. Shaw and other rational Socialists have agreed that the State would be in practice government by a small group. Any independent man who disliked that group would find his foe waiting for him at the end of every road. It may be said of Socialism, therefore, very briefly, that its friends recommended it as increasing equality, while its foes resisted it as decreasing liberty. On the one hand it was said that the State could provide homes and meals for all; on the other it was answered that this could only be done by State officials who would inspect houses and regulate meals. The compromise eventually made was one of the most interesting and even curious cases in history. It was decided to do everything that had ever been denounced in Socialism, and nothing that had ever been desired in it. Since it was supposed to gain equality at the sacrifice of liberty, we proceeded to prove that it was possible to sacrifice liberty without gaining equality. Indeed, there was not the faintest attempt to gain equality, least of all economic equality. But there was a very spirited and vigorous effort to eliminate 
-
-16 4 Eugenics and Other Evils 
-
-liberty, by means of an entirely new crop of crude regulations and interferences. But it was not the Socialist State regulating those whom it fed, like children or even like convicts. It was the Capitalist State raiding those whom it had trampled and deserted in every sort of den, like outlaws or broken men. It occurred to the wiser sociologists that, after all, it would be easy to proceed more promptly to the main business of bullying men, without having gone through the laborious preliminary business of supporting them. After all, it was easy to inspect the house without having helped to build it; it was even possible, with luck, to inspect the house in time to prevent it being built. All that is described in the documents of the Housing Problem; for the people of this age loved problems and hated solutions. It was easy to restrict the diet without providing the dinner. All that can bê found in the documents of what is called Temperance Reform. In short, people decided that it was impossible to achieve any of the good of Socialism, but they comforted themselves by achieving all the bad. All that official discipline, about which the Socialists themselves were in doubt or at least on the defensive, was taken over bodily by the Capitalists. They have now added all the bureaucratic tyrannies of a Socialist state to the old plutocratic tyrannies of a Capitalist State. For the vital point is that it did not in the smallest degree diminish the inequalities of a Capitalist State. It simply destroyed such individual liberties as re
-
-The Transformation of Socialism 165 
-
-mained among its victims. It did not enable any man to build a better house; it only limited the houses he might live in-or how he might manage to live there; forbidding him to keep pigs or poultry or to sell beer or cider. It did not even add anything to a n1an's wages; it only took away something from a man's ,vages and locked it up, whether he liked it or not, in a sort of money-box which was regarded as a medicine-chest. It does not send food into the house to feed the children; it only sends an inspector into the house to punish the parents for having no food to feed them. It does not see that they have got a fire; it only punishes them for not having a fireguard. It does not even occur to it to provide the fireguard. Now this anomalous situation will probably ultimately evolve into the Servile State of Mr. Belloc's thesis. The poor will sink into slavery; it might as correctly be said that the poor will rise into slavery. That is to say, sooner or later, it is very probable that the rich win take over the philanthropic as well as the tyrannic side of the bargain; and will feed men like slaves as well as hunting them like outlaws. But fOr the purpose of my own argument it is not necessary to carry the process so far as this, or indeed any farther than it has already gone. The purely negative stage of interference, at which we have stuck for the present, is in itself quite favourable to all these eugenical experiments. The capitalist whose half-conscious thought and course o
-f action I have simplified into a story in the preceding chapters, finds this insufficient 
-
-166 Eugenics and Other Evils 
-
-solution quite sufficient for his purposes. What he has felt for a long time is that he must check or improve the reckless and random breeding of the submerged race, which is at once outstripping his requirements and failing to fulfil his needs. Now the anomalous situation has already accustomcd him to stopping things. The first interferences with sex need only be negative; and there are alrcady negative interferences without number. So that the study of this stage of Socialism brings us to the same conclusion as that of the ideal of liberty as formally professed by Liberalism. The ideal of liberty is lost, and the ideal of Socialism is changed, till it is a mere excuse for the oppression of the poor. The first movements for intervention in the deepest domestic concerns of the poor all had this note of negative interference. Official papers were sent round to the mothers in poor streets; papers in which a total stranger asked these respectable women questions which a man would be killed for asking, in the class of what were called gentlemen or in the countries of what were called free men. They were questions supposed to refer to the conditions of maternity; but the point is here that the reformers did not begin by building up those economic or material conditions. They did not attempt to pay money or establish property to create those conditions. They never give any thingexcept orders. Another form of the intervention, and one already mentioned, is the kidnapping of children upon the most fan tastìc excuses of sham psychology. Some 
-
-The Transformation of Socialism 167 
-
-people established an apparatus of tests and trick questions; which might make an amusing game of riddles for the family fireside, but seems an insufficient reason for mutilating and dismembering the family. Others became interested in the hopeless moral condition of children born in the economic condition which they did not attempt to improve. They were great on the fact that crime was a disease; and carried on their criminological studies so successfully as to open the reformatory for little boys who played truant; there was no reformatory for reformers. I need not pause to explain that crime is not a disease. It is criminology that is a disease. Finally o
-e thing may be added which is at least clear. Whether or no the organisation of industry will issue positively in a eugenical reconstruction of the family, it has already issued negatively, as in the negations already noted, in a partial destruction of it. It took the form of a propaganda of popular divorce, calculated at least to accustom the masses to a new notion of the shifting and re-grouping of families. I do not discuss the question of divorce here, as I have done elsewhere, in its intrinsic character; I merely note it as one of these negative reforms which have been substituted for positive economic equality. It was preached with a weird hilarity, as if the suicide of love were something not only humane but happy But it need not be explained, and certainly it need not be denied, that the harassed poor of a diseased industrialism were indeed maintaining marriage under 
-
-168 Eugenics and Other Evils 
-
-every disadvantage, and often found individual relief in divorce. Industrialism docs produce n1any unhappy marriages, for the same reason that it produces so many unhappy men. But all the reforms were directed to rescuing the industrialism rather than the happiness. Poor couples were to be divorced because they were already divided. Through all this modern muddle there runs the curious principle of sacrificing the ancient uses of things because they do not fit in with the modern abuses. When the tares are found in the wheat, the greatest promptitude and practicality is always shown in burning the wheat and gathering the tares into the barn. And since the serpent coiled about the chalice had dropped his poison in the wine of Cana, d.nalysts were instantly active in the effort to preserve the poison and to pour away the wine. 
+Finally one thing may be added which is at least clear. Whether or no the organisation of industry will issue positively in a eugenical reconstruction of the family, it has already issued negatively, as in the negations already noted, in a partial destruction of it. It took the form of a propaganda of popular divorce, calculated at least to accustom the masses to a new notion of the shifting and re-grouping of families. I do not discuss the question of divorce here, as I have done elsewhere, in its intrinsic character; I merely note it as one of these negative reforms which have been substituted for positive economic equality. It was preached with a weird hilarity, as if the suicide of love were something not only humane but happy But it need not be explained, and certainly it need not be denied, that the harassed poor of a diseased industrialism were indeed maintaining marriage under every disadvantage, and often found individual relief in divorce. Industrialism docs produce n1any unhappy marriages, for the same reason that it produces so many unhappy men. But all the reforms were directed to rescuing the industrialism rather than the happiness. Poor couples were to be divorced because they were already divided. Through all this modern muddle there runs the curious principle of sacrificing the ancient uses of things because they do not fit in with the modern abuses. When the tares are found in the wheat, the greatest promptitude and practicality is always shown in burning the wheat and gathering the tares into the barn. And since the serpent coiled about the chalice had dropped his poison in the wine of Cana, analysts were instantly active in the effort to preserve the poison and to pour away the wine.
