--- a/src/eugenics-evils/1-8.md
+++ b/src/eugenics-evils/1-8.md
@@ -1,6 +1,6 @@
 # A Summary of a False Theory
 
-I have up to this point treated the Eugenists, I hope, as seriously as they treat themselves. I have attempted an analysis of their theory as if it were an utterly abstract and disinterested theory; and so considered, there seems to be very little left of it. But before I go on, in the second part of this book, to talk of the ugly things that really are left, I wish to recapitulate the essential points in their essential order. lest any personal irrelevance or over-emphasis (to which I' know myself to be prone) should have confused the course of what I believe to be a perfectly fair and consistent argument. To n1ake it yet clearer, I will summarise the thing under chapters, and in quite short paragraphs.
+I have up to this point treated the Eugenists, I hope, as seriously as they treat themselves. I have attempted an analysis of their theory as if it were an utterly abstract and disinterested theory; and so considered, there seems to be very little left of it. But before I go on, in the second part of this book, to talk of the ugly things that really are left, I wish to recapitulate the essential points in their essential order. lest any personal irrelevance or over-emphasis (to which I know myself to be prone) should have confused the course of what I believe to be a perfectly fair and consistent argument. To n1ake it yet clearer, I will summarise the thing under chapters, and in quite short paragraphs.
 
 In the first chapter I attempted to define the essential point in which Eugenics can clain1, and does claim, to be a new morality. That point is that it is possible to consider the baby in considering the bride. I do not adopt the ideal irresponsibility of the man who said, "What has posterity done for us?" But I do say, to start with, "What can we do for posterity, except deal fairly with our contemporaries?" Unless a man love his wife whom he has seen, how shall he love his child whom he has not seen?
 
